New features updated
